Add support for multi-valued primitives